# docs-to-testcases

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/api/routes/: documents.py  evaluation.py  finetune.py  generation.py  health.py  providers.py  qa.py  settings.py
ai-service/app/core/: document_parser.py  runtime_settings.py
ai-service/app/core/chunking/: base_chunker.py  semantic_chunker.py  table_aware_chunker.py
ai-service/app/core/embedding/: ollama_embedder.py
ai-service/app/core/llm/: ollama_client.py  provider_registry.py
ai-service/app/core/llm/prompts/: qa_prompt.py  test_case_generation.py  test_code_generation.py  training_data_prompt.py
ai-service/app/core/parsers/: docx_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py  xlsx_parser.py
ai-service/app/core/rag/: chain.py  eval_embeddings.py  evaluation.py  reranker.py  retriever.py
ai-service/app/core/vectorstore/: chroma_store.py
ai-service/app/models/: requests.py  responses.py
ai-service/app/utils/: gherkin_validator.py
api-gateway/: Dockerfile  package-lock.json  package.json
api-gateway/src/: app.module.ts  main.ts
api-gateway/src/config/: configuration.ts
api-gateway/src/services/: ai-service.client.ts
docs/: local-model-deployment-guide.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api-client.ts
frontend/src/types/: index.ts
scripts/: evaluate_rag.py  init-db.sql
(+31 files in other folders)
